chore: new parameters in pipelines and documentation adapted